test/resources/Semantics/NonexistentType.stderr
Error on line 12: unknown type Foo
Error on line 16: unknown type Bad